# ul-fri-nlp-course-project-2025-2026-sickerthanasnicker

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  app_plan.md  compliance.md  copilot-instructions.md  grade.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
evaluation/: README.md  config.example.env  config.json  eval_config.py  io_utils.py  judge_eval.py  list_models.py  manual_eval_appendix.md  manual_openwebui_eval.py  model_providers.py  progress_utils.py  questions.jsonl  retrieval_eval.py  retrieval_shared.py  run_eval.py  text_utils.py  visualize_results.py  vote_eval.py
evaluation/backlog/: vote_score_metric.md
evaluation/fine_tuning/: prepare_dataset.py
evaluation/optimizations/: README.md  build_official_corpus.py  common.py  config.json  create_ollama_model.py  export_webui_model.py  merge_lora.py  monitor_official_sources.py  official_sources.json  prepare_corpus.py  prepare_peft_dataset.py  rag_optimization_report.md  requirements-peft.txt  run_prompt_sweep.py  summarize_optimization.py  train_lora.py
evaluation/results/: answers.jsonl  arena_live_smoke_answers.jsonl  arena_live_smoke_judgements.jsonl  arena_smoke_answers.jsonl  arena_smoke_judgements.jsonl  gams_answers.jsonl  gams_judgements.jsonl  judgements.jsonl  manual_openwebui_eval_answers.jsonl  manual_openwebui_eval_judgements.jsonl  openwebui_final_model_smoke.json  optimized_ollama_smoke_answers.jsonl  optimized_ollama_smoke_judgements.jsonl  report.md  retrieval.jsonl  retrieval_summary.csv  (+3 more)
report/: .latexmkrc  report-new.tex  report.bib  report.tex
(+92 files in other folders)
