[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ul-fri-nlp-course-project"
version = "0.1.0"
description = "Slovenian employment-law RAG assistant for the UL FRI NLP course project."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
